--- a/src/app.css
+++ b/src/app.css
@@ -105,3 +105,13 @@ button:focus:not(:focus-visible) {
 		font-size: 2.4rem;
 	}
 }
+
+hr {
+	border-top: 1px solid #aaa;
+	width: 100%;
+	margin: 10px auto;
+}
+
+button {
+	max-width: 200px;
+}
